--- a/src/assets/scss/desktop.scss
+++ b/src/assets/scss/desktop.scss
@@ -10,7 +10,7 @@
     padding: 10px 55px;
     border-bottom: 2px solid #ddd;
 
-    .header-main {
+    .header__content {
       .btn-menu,
       .btn-close {
         display: none;
